# panel-vegafusion

./: .gitignore  MANIFEST.in  README.md  jupyter-panel-proxy.yml  package-lock.json  pyproject.toml  script.py  setup.cfg  setup.py
binder/: environment.yml  postBuild  requirements.txt
examples/: basic.py  dev_app.py  reference.py
scripts/: package.json  tsconfig.json
scripts/src/: global.d.ts  index.ts
src-js/: index.html  package-lock.json  package.json  webpack.config.experimental.js
src-js/src/: index.ts
src/panel_vegafusion/: .bokeh  __init__.py  _utils.py  html_button.py  index.ts  package-lock.json  package.json  renderer.py  runtime.py  transformer.py  tsconfig.json  update.py  utils.py  vega_fusion_pane.py  vega_fusion_pane_reactive.py  vegafusion_pane.css  vegafusion_pane.py  vegafusion_pane_bokeh_ext.py
src/panel_vegafusion/assets/bundled/panel-vegafusion/: 692.js  821.js  882.js  main.js
src/panel_vegafusion/models/: html_button_model.py  html_button_model.ts  index.ts  vegafusion_model.py  vegafusion_model.ts
tasks/: __init__.py  build.py  test.py
tests/: apps.py  reference_example.ipynb  test_panel_vegafusion.py  test_utils.py
tests/apps/: test_dev_app.py
