[metadata]
name = panel-vegafusion
version = 0.0.1
author = Marc Skov Madsen
author_email = marc.skov.madsen@gmailc.om
description = Build interactive big data apps with Altair and Vega easily using Panel + VegaFusion.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    altair
    panel
    vegafusion-jupyter

[options.extras_require]
dev = 
    autoflake8
    black
    isort
    mypy
    pylint
    pytest
    watchdog

examples = 
    ipywidgets_bokeh
    jupyter_bokeh
    jupyterlab
    vega_datasets

all = 
    autoflake8
    black
    ipywidgets_bokeh
    isort
    jupyter_bokeh
    jupyterlab
    mypy
    pylint
    pytest
    vega_datasets
    watchdog

[options.packages.find]
where = src