[metadata]
name = panel-vegafusion
version = 0.0.4
author = Marc Skov Madsen
author_email = marc.skov.madsen@gmailc.om
description = Build interactive big data apps with Altair and Vega easily using Panel + VegaFusion.
home_page = https://github.com/MarcSkovMadsen/panel-vegafusion
long_description = file: README.md
long_description_content_type = text/markdown
license = APGL3
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    altair
    panel
    pyarrow
    vegafusion-python

[options.extras_require]
dev = 
    autoflake
    black
    invoke
    isort
    mypy
    pylint
    pytest
    pytest-cov
    twine
    watchdog

examples = 
    ipywidgets_bokeh
    jupyter_bokeh
    jupyterlab
    vega_datasets

all = 
    autoflake
    black
    invoke
    ipywidgets_bokeh
    isort
    jupyter_bokeh
    jupyterlab
    mypy
    pylint
    pytest
    pytest-cov
    twine
    vega_datasets
    watchdog

[options.packages.find]
where = src